# seerai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GOALS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
data/: snapshot.de.json  snapshot.it.json  snapshot.json  snapshot.ru.json
scripts/: backfill_coached_sessions.py  bootstrap_real_org.py  check_i18n.cjs  coach_archetypes.py  coach_insights.py  generate_locale_data.py  i18n_extract.py  i18n_translate.py  integration_ingest_check.py  mock_data.py  qa_pass.py  screenshot.cjs
seerai/: _logging.py  archetypes.py  datasource.py  entities.py  firestore_client.py  firestore_model.py  generate.py  local_client.py  locale_data.py  models.py  plausibility.py  pricing.py  privacy.py  snapshot.py
seerai/analytics/: endpoint.py
seerai/coach/: analytics.py  endpoint.py
seerai/cost/: endpoint.py
seerai/dashboard/: endpoint.py
seerai/dashboard/pages/: admin.html  analytics.html  coach.html  cost.html  faq.html  index.html  insights.html  (+6 more)
seerai/ingest/: endpoint.py
seerai/insights/: endpoint.py
seerai/org/: endpoint.py
seerai/query/: endpoint.py
seerai/static/: calendar.js  i18n.js  icons.js  nav.js  privacy.js  tooltips.js  tour.js
seerai/subscriptions/: endpoint.py
tests/: test_analytics.py  test_coach_analytics.py  test_coach_generate.py  test_coach_interventions.py  test_cost.py  test_datasource.py  test_generate.py  test_i18n.py  test_ingest.py  test_insights.py  test_local_client.py  test_locale_snapshots.py  test_models.py  test_org.py  test_plausibility.py  test_privacy.py
(+4 files in other folders)
